--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
@@ -47,7 +47,7 @@
                         </p:column>
                         <p:column headerText="Acciones">
                             <i class="icon-list Fs25 Red" style="cursor: pointer" title="Mostrar Componente"></i>
-                            <i class="icon-clock Fs25 Red" style="cursor: pointer" title="Modificar Componente"></i>
+                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Componente"></i>
                             <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Componente"></i>
                         </p:column>
                     </p:dataTable>
