--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteMatricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteMatricula/index.xhtml
@@ -7,19 +7,23 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Reporte Matricula" url="#{siteUrls.reporteMatricula}"/>
+            <p:menuitem value="Reporte de Matriculas" url="#{siteUrls.reporteMatricula}"/>
 
             <p:separator />
         </p:breadCrumb>
     </ui:define>
     <ui:define name="content">
         <p:tabView>
-            <p:tab title="Reporete de Matriculas">
+            <p:tab title="Reporte de Matriculas">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                    <div class="EmptyBox20"></div>
+                    <p:outputLabel value="Año"></p:outputLabel>
+                    <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
+                    <div class="EmptyBox20"></div>
                     <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="false"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
@@ -29,7 +33,7 @@
                         <p:column headerText="Matricula" >
                             #{formatoPantallas.matricula}
                         </p:column>
-                        <p:column headerText="Anio" >
+                        <p:column headerText="Año" >
                             #{formatoPantallas.anio2}
                         </p:column>
                         <p:column headerText="Alumno" >
