--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/index.xhtml
@@ -17,6 +17,11 @@
         <p:tabView class="Container100">
             <p:tab title="Transmitir Clase en Vivo">
                 <h:form>
+                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                        <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    </p:dialog>
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                    <div class="EmptyBox20"></div>
                     <div class="Container73 Responsive">
                         <h:outputScript name="videoclase.js" library="js" />                                            
                         <video id="video" class="Container73" autoplay="true"></video>                    
@@ -52,6 +57,11 @@
             </p:tab>
             <p:tab title="Recibir Clase en Vivo">
                 <h:form>
+                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                        <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    </p:dialog>
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                    <div class="EmptyBox20"></div>
                     <div class="Container73 Responsive">
                         <h:outputScript name="videoclase.js" library="js" />                    
                         <video id="video2" class="Container73" autoplay="true" controls="true"></video>                    
