--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionEvaluaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionEvaluaciones/index.xhtml
@@ -20,6 +20,7 @@
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                    <div class="EmptyBox20"></div>
                     <p:remoteCommand  onstart="alert('Modificar')" update="clases" name="modificar"/>
                     <p:remoteCommand  onstart="alert('Eliminar')" update="clases" name="eliminar"/>
                     <p:dataTable id="clases" rows="10" var="car" value="#{clasesForm.plantillas}" 
@@ -180,6 +181,7 @@
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                    <div class="EmptyBox20"></div>
                     <p:tabView >
                         <p:tab title="Preguntas">
                             <p:dataTable value="#{clasesForm.plantillas}" reflow="true" class="Container100 Responsive"> 
