--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index.xhtml
@@ -35,7 +35,7 @@
                             #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones"  filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
-                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Visualizar Clase"></i>
+                            <i class="icon-visibility1 Fs25 Red" style="cursor: pointer" title="Visualizar Clase"></i>
                             <i class="icon-clock Fs25 Red" style="cursor: pointer" title="Modificar Clase"></i>
                             <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Clase"></i>
                         </p:column>
