cambios para generación de pantallas

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/index.xhtml
@@ -248,7 +248,7 @@
                     </div>
                 </h:form>
             </p:tab>
-            <p:tab title="Crear Video Clase Almacenada">
+            <p:tab title="Modificar Video Clase Almacenada">
                 <h:form>                    
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
